--- a/2603_ERM.tex
+++ b/2603_ERM.tex
@@ -160,7 +160,7 @@ Foly Ananou, PhD \\
         \item [$\bullet$] Berstein (1996) defines risk as the uncertainty around the outcome of a decision, process or event which can be negative (losses) or positive (benefits or opportunities).
 
          \centering
-  \includegraphics[height=6cm, width=0.6\textwidth]{sbc.png}
+  \includegraphics[height=6cm]{risk_bell_curve.png}
     \vspace{1cm} 
 
     \end{itemize}
