--- a/2603_ERM.tex
+++ b/2603_ERM.tex
@@ -114,10 +114,12 @@ Foly Ananou, PhD \\
 \subsection{Course objectives}
 \begin{frame}{Course objectives}
     \begin{itemize}
-        \item[$\bullet$] Master ERM fundamentals : understand the principles, frameworks, and benefits of ERM
+        \item[$\bullet$] Master ERM fundamentals : understand the principles, frameworks, 
+        and benefits of ERM
 \medskip
 
-\item[$\bullet$] Analyse and measure risk: learn to identify risk, assess and quantify risks using qualitative and quantitative tools 
+\item[$\bullet$] Analyse and measure risk: learn to identify risk, assess and quantify risks
+ using qualitative and quantitative tools 
 \medskip
 
         \item[$\bullet$] Understand the implementation of ERM and best practices
@@ -143,10 +145,15 @@ Foly Ananou, PhD \\
         \item [$\bullet$] Let consider the following situations: 
                                \medskip
             \begin{itemize}
-                \item[$\bullet$] You are in vacation in Cote d'Ivoire and decide to have an outdoor gathering with friends at the beach. $\rightarrowtail $ What could possibly go wrong ? How likely could this happen ? if it does happen, will it be very harmful ? What can you do to prevent the event from happening or reduce the impact ? 
+                \item[$\bullet$] You are in vacation in Cote d'Ivoire and decide to have an 
+                outdoor gathering with friends at the beach. $\rightarrowtail $ What could 
+                possibly go wrong ? How likely could this happen ? if it does happen, will it 
+                be very harmful ? What can you do to prevent the event from happening or reduce 
+                the impact ? 
                        \medskip
 
- \item[$\bullet$] You got it involve in a car crash $\rightarrowtail $ Is it necessary someone fault or is it just one of those things that happen in life ? 
+ \item[$\bullet$] You got it involve in a car crash $\rightarrowtail $ Is it necessary 
+ someone fault or is it just one of those things that happen in life ? 
             \end{itemize}
 
 
@@ -157,7 +164,9 @@ Foly Ananou, PhD \\
 \subsection{Chap1}
 \begin{frame}{Understanduing risk: a definition}
     \begin{itemize}
-        \item [$\bullet$] Berstein (1996) defines risk as the uncertainty around the outcome of a decision, process or event which can be negative (losses) or positive (benefits or opportunities).
+        \item [$\bullet$] Berstein (1996) defines risk as the uncertainty around the 
+        outcome of a decision, process or event which can be negative (losses) or 
+        positive (benefits or opportunities).
 
          \centering
   \includegraphics[height=6cm]{risk_bell_curve.png}
@@ -172,7 +181,8 @@ Foly Ananou, PhD \\
         \item [$\bullet$] Uncertainty : outcomes are not guaranteed or predictable
          \medskip 
 
-                 \item [$\bullet$] Dual nature: risk is not only about threats or losses, it can also includes opportunities          \medskip 
+                 \item [$\bullet$] Dual nature: risk is not only about threats or losses,
+                  it can also includes opportunities          \medskip 
 
                                   \item [$\bullet$] Measurable dimensions: 
     \begin{itemize}
@@ -184,7 +194,8 @@ Foly Ananou, PhD \\
          \medskip 
           \item [$\bullet$] \Ovalbox{\textbf{time}} $\rightarrowtail $ how long ? 
          \medskip 
-          \item [$\bullet$] \Ovalbox{\textbf{correlation}} $\rightarrowtail $ can it escalate or drive other risks ? 
+          \item [$\bullet$] \Ovalbox{\textbf{correlation}} $\rightarrowtail $ can it escalate or drive
+          other risks ? 
          \medskip 
     \end{itemize}
 
@@ -195,18 +206,43 @@ Foly Ananou, PhD \\
 \begin{frame}{Understanduing risk: categorization}
     \begin{itemize}
 
-                 \item [$\bullet$] Can you identify the risk type in the following sceenarios ? (let guess together) 
+                 \item [$\bullet$] Can you identify the risk type in the following sceenarios ? 
+                 (let guess together) 
     \begin{itemize}
-        \item [$\bullet$] A large international bank experiences a sophisticated ransomware attack that encrypts critical customers data and shuts down online banking services for almost 2W. 
+        \item [$\bullet$] A large international bank experiences a sophisticated ransomware attack
+        that encrypts critical customers data and shuts down online banking services for almost 2W. 
          \medskip 
-          \item [$\bullet$] The government announces overnight that all cryptoccurrencies transactions are banned taking effect immediately, forcing fintech companies to halt operatiions immediately.  
+          \item [$\bullet$] The government announces overnight that all cryptoccurrencies transactions
+          are banned taking effect immediately, forcing fintech companies to halt operatiions 
+          immediately.  
          \medskip 
-          \item [$\bullet$] \Ovalbox{\textbf{severity}} $\rightarrowtail $ how bad (or good) coud it get ? 
+          \item [$\bullet$] An investment firm relies heavily on a proprietary risk model to allocate 
+          capital. During a period of market stress, the model significantly underestimates correlations 
+          across asset classes, leading to losses far exceeding management’s stated risk appetite.
          \medskip 
-          \item [$\bullet$] \Ovalbox{\textbf{time}} $\rightarrowtail $ how long ? 
+          \item [$\bullet$] An extreme weather event severely damages key production facilities of an
+          energy company, forcing a prolonged shutdown. At the same time, regulators announce tighter
+          environmental standards, increasing future compliance and investment costs.
+    \end{itemize}
+
+    \end{itemize}
+\end{frame}
+
+\subsection{Chap1}
+\begin{frame}{Understanduing risk: categorization}
+    \begin{itemize}
+
+                 \item [$\bullet$] There is no "one-size-fit-all" in terms of risk category :
+                 it's dependent on the analysis framework.  
+    \begin{itemize}
+        \item [$\bullet$] Market risk can be related to financial markets, for firms it could 
+        relate to their ability to compete in a given (chosen) market(s)
+          \medskip 
+          \item [$\bullet$] Business risk can indicate the full scope of risks faced by a firm or just a subset
+          (specific) risk related to the type of business the firm is envolved in (insurance risk for example)
          \medskip 
-          \item [$\bullet$] \Ovalbox{\textbf{correlation}} $\rightarrowtail $ can it escalate or drive other risks ? 
-         \medskip 
+          \item [$\bullet$] Credit risk can include or exclude risk of changes in observed market 
+          credit spread -- with some hint also to liquidity risk.  
     \end{itemize}
 
     \end{itemize}
