--- a/2603_ERM.tex
+++ b/2603_ERM.tex
@@ -27,6 +27,7 @@
     }
 }
 \usepackage{hyperref}
+\hypersetup{colorlinks=blue, linkcolor=blue, urlcolor=blue}
 \usepackage{pgf, tikz, xcolor} % pour mes dessins latex
 \usetikzlibrary{
 	arrows,%
@@ -295,14 +296,15 @@ What happen if interest rate rise to 5\% ?
   \end{itemize}
   \medskip
   \item Expected shortfall extends VaR by capturing tail risk beyond the VaR cutoff.
-  \item \href{run:var_es_exercices.pdf}{VaR and ES exercices}
+   \medskip
+  \item \href{https://github.com/fsananou/bsb-erm/blob/ebbd7723a3ce60ced169f337c8f0b4d8e8cad564/var_es_exercices.pdf}{\ovalbox{VaR and ES exercices}}
 \end{itemize}
 \end{itemize}
 \end{column}
 
 \begin{column}{0.48\textwidth}
 \centering
-\includegraphics[width=\linewidth]{var.png} % <-- change path
+\includegraphics[width=\linewidth]{var.png}
 \end{column}
 \end{columns}
 
@@ -311,3 +313,4 @@ What happen if interest rate rise to 5\% ?
 
 \end{document}
 
+\Ovalbox{
