--- a/2603_ERM.tex
+++ b/2603_ERM.tex
@@ -285,8 +285,7 @@ What happen if interest rate rise to 5\% ?
 \begin{column}{0.52\textwidth}
 \begin{itemize}
     \item [$\bullet$] Commonly used and simplest measures are the Value-at-risk (VaR) and Expected Shortfall (ES)
-
-
+\medskip
 \begin{itemize}
   \item VaR summarizes potential financial losses within a firm, portfolio,
   or position over a specific time frame. It reflects the worst expected loss
