--- a/2603_ERM.tex
+++ b/2603_ERM.tex
@@ -1,4 +1,4 @@
-\documentclass[aspectratio=169, 11pt]{beamer} % smaller for 10 pt
+\documentclass[aspectratio=169, 10pt]{beamer} % smaller for 10 pt
 \usepackage[english]{babel}
 \usepackage[utf8x]{inputenc}
 %
@@ -316,7 +316,7 @@ What happen if interest rate rise to 5\% ?
 
 \subsection{Chap1}
 \subsection{Chap1}
-\begin{frame}{ERM fundamentals}
+\begin{frame}{Definition of ERM}
 
     \begin{itemize}
 
@@ -334,19 +334,11 @@ What happen if interest rate rise to 5\% ?
 
 \end{frame}
 
-\subsection{Chap1}
-\subsection{Chap1}
-\begin{frame}{ERM fundamentals}
-     \includegraphics[width=\linewidth]{erm_process.png}
-\vspace{1em}
-\ovalbox{Discussion: Is ERM a quantitative or a qualitative tool ?}
-
-\end{frame}
 
 
 \subsection{Chap1}
 \subsection{Chap1}
-\begin{frame}{ERM fundamentals}
+\begin{frame}{Evolution of ERM}
     \begin{itemize}
 
 \item[$\bullet$]  ERM has evolved from a control-oriented function
@@ -381,7 +373,131 @@ to a strategic framework focused on value creation.
     creation.
 \end{itemize}
 \end{itemize}
+\end{frame}
 
+\subsection{Chap1}
+\subsection{Chap1}
+\begin{frame}{Core risk terminology}
+\begin{itemize}
+    \item[$\bullet$] \textbf{Uncertainty} :
+    Lack of complete information about future outcomes, without necessarily
+    implying measurable probabilities.
+
+    \item[$\bullet$] \textbf{Risk exposure} :
+    The degree to which the organization is subject to a given risk, given its
+    activities, assets, and environment.
+
+    \item[$\bullet$] \textbf{Risk appetite} :
+    The amount and type of risk an organization is willing to accept in pursuit
+    of its strategic objectives.
+
+    \item[$\bullet$] \textbf{Risk tolerance} :
+    Acceptable variation around objectives, translating risk appetite into
+    operational limits.
+
+    \item[$\bullet$] \textbf{Risk capacity} :
+    The maximum level of risk the organization can absorb without threatening
+    its viability.
+
+    \item[$\bullet$] \textbf{Residual risk} :
+    The level of risk remaining after controls and mitigation actions are applied.
+
+    \item[$\bullet$] \textbf{Inherent risk} :
+    The level of risk that exists in the absence of any controls or mitigation.
+
+\end{itemize}
+
+\end{frame}
+
+
+
+\begin{frame}{ERM Framework}
+
+\begin{itemize}
+    \item[$\bullet$]\textbf{Reference frameworks (COSO, ISO 31000)} :
+    Provide a common structure and language for identifying, assessing, and
+    governing risks across the organization.
+\medskip
+    \item[$\bullet$] \textbf{Risk principles and policies} :
+    Establish consistent rules for how risks are defined, assessed, reported,
+    and escalated.
+\medskip
+
+    \item[$\bullet$] \textbf{Risk appetite and tolerance} :
+    Translate strategic objectives into explicit limits on acceptable risk-taking
+    and risk variability.
+\medskip
+
+    \item[$\bullet$] \textbf{Link to strategy and performance} :
+    Ensure that risk considerations influence strategic choices, capital
+    allocation, and performance evaluation.
+\end{itemize}
+
+\end{frame}
+
+\subsection{Chap1}
+\subsection{Chap1}
+\begin{frame}{ERM Architecture}
+
+
+\begin{itemize}
+    \item [$\bullet$] \textbf{Board of Directors} \\
+    Sets risk appetite, oversees risk strategy, and ensures that risk-taking is
+    aligned with the organization’s long-term objectives.
+
+    \item [$\bullet$] \textbf{Risk Committee} \\
+    Provides focused oversight, challenges management decisions, and ensures
+    timely escalation of material risks.
+
+    \item [$\bullet$] \textbf{Executive Management} \\
+    Owns risk-taking decisions and integrates risk considerations into day-to-day
+    management and strategic planning.
+
+    \item [$\bullet$] \textbf{Chief Risk Officer (CRO)} \\
+    Provides an independent, enterprise-wide view of risk and coordinates risk
+    management activities across functions.
+
+    \item [$\bullet$] \textbf{Three Lines of Defense} \\
+    Clarifies roles between risk-taking (first line), risk oversight and control
+    (second line), and independent assurance (third line).
+\end{itemize}
+
+
+\end{frame}
+
+
+\subsection{Chap1}
+\subsection{Chap1}
+\begin{frame}{ERM process}
+     \includegraphics[width=\linewidth]{erm_process.png}
+\vspace{1em}
+\ovalbox{Discussion: Is ERM a quantitative or a qualitative tool ?}
+
+\subsection{Chap1}
+\subsection{Chap1}
+\end{frame} 
+
+
+\subsection{Chap1}
+\subsection{Chap1}
+\begin{frame}{ERM: Framework, Architecture and Process (recap)}
+
+\begin{description}
+    \item[\textbf{Framework}] Defines principles, boundaries, and acceptable
+    risk-taking (risk appetite, policies, strategic alignment).
+
+    \item[\textbf{Architecture}] Allocates responsibilities and ensures risk
+    oversight (board, CRO, three lines of defense).
+
+    \item[\textbf{Process}] Operationalizes ERM through identification,
+    assessment, response, and monitoring of risks.
+\end{description}
+
+\begin{block}{Synthesis}
+Effective ERM requires consistency between what is allowed
+(framework), who is accountable (architecture), and how risks are
+managed (process).
+\end{block}
 
 \end{frame}
 
